new readme org-file

--- a/README.org
+++ b/README.org
@@ -8,3 +8,24 @@ Header Only Org-mode Parser on C, inspired by stb libraries
 
 make first && ./first
 
+** Use
+
+just include [[https://github.com/haller33/orgmodeparser-c/blob/master/src/orgmodeparser.h][src/lib/orgmodeparser.h]] on your c/c++ code, then
+
+#+begin_src c
+#include "orgmodeparser.h"
+#+end_src
+
+then define the followed flag
+
+#+begin_src c
+#define ORGMODEPARSERC_H_
+#+end_src
+
+
+done!, now use the [[https://github.com/haller33/orgmodeparser-c/tree/master/demo][demo]] codes, and [[https://github.com/haller33/orgmodeparser-c/blob/master/src/tester.c][test]] for more usage.
+
+** License
+
+MIT
+
